--- a/mobius-performance/package.json
+++ b/mobius-performance/package.json
@@ -20,7 +20,7 @@
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
+    "next": "^16.1.6",
     "next-seo": "^6.8.0",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
